--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+ul.todo_content li {
+  font-size: 17px;
+  font-family: sans-serif;
+  padding: 10px 0 20px 20px;
+  box-shadow: 0 2px 3px -1px #d9d9d9;
+  cursor: pointer;
+  user-select: none;
+}
+.todo_all_content_div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.user_content_list {
+  overflow-y: scroll;
+  height: 500px;
+  width: 50%;
+  background-color: #f2fffb;
+}
+
+.todo_header h3 {
+  font-size: 35px;
+  font-family: sans-serif;
+  color: #1cc1a0;
+  text-align: center;
+}
+.todo_header {
+  background-color: #f2fffb;
+  width: 50%;
+  border-radius: 10px;
+}
+.todo_main_content_div {
+  margin: 50px 0;
+}
+
+/* SCROLLBAR */
+
+.user_content_list::-webkit-scrollbar {
+  width: 12px;
+}
+
+.user_content_list::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+.user_content_list::-webkit-scrollbar-thumb {
+  background: #1cc1a0;
+  border-radius: 10px;
 }
